Update to upstream release 1.7.1.